--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   country_picker: ^2.0.11
+  card_swiper: ^2.0.3
   flutter_glow: ^0.2.0
   flutter_config: ^2.0.0
   flutter_datetime_picker:
@@ -23,6 +24,7 @@ dependencies:
       ref: master
   google_maps_flutter: ^2.1.3
   google_static_maps_controller: ^0.6.0
+  hidden_drawer_menu: ^3.0.1
   image_cropper: ^1.5.0
   image_picker: ^0.8.4+11
   location: ^4.3.0
