--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  
   cupertino_icons: ^1.0.2
   country_picker: ^2.0.11
   card_swiper: ^2.0.3
   flutter_glow: ^0.2.0
+  foil: ^0.9.0+1
   flutter_config: ^2.0.0
   flutter_datetime_picker:
     git:
       url: https://github.com/Realank/flutter_datetime_picker.git
       ref: master
+  get: ^4.6.1
   google_maps_flutter: ^2.1.3
   google_static_maps_controller: ^0.6.0
   hidden_drawer_menu: ^3.0.1
