--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_glow: ^0.2.0
   foil: ^0.9.0+1
   flutter_config: ^2.0.0
+  flutter_switch: ^0.3.2
   flutter_datetime_picker:
     git:
       url: https://github.com/Realank/flutter_datetime_picker.git
@@ -29,11 +30,13 @@ dependencies:
   hidden_drawer_menu: ^3.0.1
   image_cropper: ^1.5.0
   image_picker: ^0.8.4+11
+  intl: ^0.17.0
   location: ^4.3.0
   pinput: ^2.2.4
   permission_handler: ^9.2.0
   percent_indicator: any
   swipeable_card_stack: ^0.0.5
+  syncfusion_flutter_sliders: ^20.1.58
   
 
 dev_dependencies:
