--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  
   cupertino_icons: ^1.0.2
   country_picker: ^2.0.11
   card_swiper: ^2.0.3
@@ -20,28 +19,41 @@ dependencies:
   foil: ^0.9.0+1
   flutter_config: ^2.0.0
   flutter_switch: ^0.3.2
+  flutter_bloc: ^8.0.1
   flutter_datetime_picker:
     git:
       url: https://github.com/Realank/flutter_datetime_picker.git
       ref: master
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.17
+  firebase_storage: ^10.2.17
   get: ^4.6.1
   google_maps_flutter: ^2.1.3
   google_static_maps_controller: ^0.6.0
+  get_it: ^7.2.0
   hidden_drawer_menu: ^3.0.1
   image_cropper: ^1.5.0
   image_picker: ^0.8.4+11
   intl: ^0.17.0
   location: ^4.3.0
+  provider: ^6.0.3
   pinput: ^2.2.4
   permission_handler: ^9.2.0
   percent_indicator: any
   swipeable_card_stack: ^0.0.5
   syncfusion_flutter_sliders: ^20.1.58
+  walletconnect_dart: ^0.0.10
+  url_launcher: ^6.1.3
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.2.0
+  json_annotation: ^4.5.0
+  freezed: any
+  freezed_annotation: any
   build_runner: ^2.1.10
   mockito: ^5.1.0
   mockingjay: ^0.2.0
@@ -51,16 +63,11 @@ flutter:
 
   assets:
     - assets/
+    - fonts/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: GothamRounded
+      fonts:
+        - asset: fonts/GothamRounded-Medium.otf
+          weight: 500
 
