--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 #ENV with api key
 .env
 
+#node modules
+node_modules
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
