--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   country_picker: ^2.0.11
   card_swiper: ^2.0.3
+  cloud_functions: ^3.2.16
   flutter_glow: ^0.2.0
   foil: ^0.9.0+1
   flutter_config: ^2.0.0
