--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,6 +29,8 @@ dependencies:
   firebase_auth: ^3.3.19
   cloud_firestore: ^3.1.17
   firebase_storage: ^10.2.17
+  geolocator: ^9.0.1
+  geocoding: ^2.0.4
   get: ^4.6.1
   google_maps_flutter: ^2.1.3
   google_static_maps_controller: ^0.6.0
@@ -40,10 +42,12 @@ dependencies:
   location: ^4.3.0
   provider: ^6.0.3
   pinput: ^2.2.4
-  permission_handler: ^9.2.0
+  permission_handler: ^10.0.0
   percent_indicator: any
+  rive: ^0.9.0
   swipeable_card_stack: ^0.0.5
   syncfusion_flutter_sliders: ^20.1.58
+  tcard: ^1.3.5
   walletconnect_dart: ^0.0.10
   url_launcher: ^6.1.3
   
